<resources>
    <string name="app_name">约吧</string>
    <string name="user_name">昵称</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="check">确\u0020\u0020\u0020\u0020定</string>
    <string name="res_hints">提示：手机号必须填写才能完成注册</string>
    <string name="camera">拍\u0020\u0020\u0020\u0020照</string>
    <string name="album">从相册选择</string>
    <string name="back">返回</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="yue">约吧</string>
    <string name="message">消息</string>
    <string name="friends">好友</string>
    <string name="setting">设置</string>
    <string name="find_password">修改密码</string>
    <string name="sign">签名：</string>
    <string name="about">关于约吧</string>
    <string name="login_out">退出</string>
    <string name="ensure_dialog_ensure">确定</string>
    <string name="ensure_dialog_cancel">取消</string>
</resources>
