<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:titleTextColor="@color/black">
        </android.support.v7.widget.Toolbar>
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolBar"
            android:background="@drawable/main_bg">

            <include layout="@layout/swipecard" />
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@color/black"
        android:clickable="true"
        android:gravity="center_horizontal">
        <com.mark.makefriends.support.CircularImage
            android:id="@+id/user_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="昵称"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="点击查看/编辑"
            android:textSize="16sp"
            android:textColor="@color/gray22"/>

        <LinearLayout
            android:id="@+id/yue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="45dp"
                android:background="@drawable/yue_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/yue"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="45dp"
                android:background="@drawable/message_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="45dp"
                android:background="@drawable/friends_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/friends"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="45dp"
                android:background="@drawable/set_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>